# vid_dup_finder

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  todo.txt
.cargo/: config
src/: main.rs
src/app/: app_cfg.rs  app_fns.rs  arg_parse.rs  arg_parse_template.txt  errors.rs  mod.rs  resolution_thunk.rs  search_output.rs
src/app/gui/: gui_state.rs  gui_thumbnail_set.rs  gui_widget.rs  gui_zoom.rs  mod.rs  run_gui.rs
src/generic_filesystem_cache/: base_fs_cache.rs  errors.rs  mod.rs  processing_fs_cache.rs
src/test/: fudan_preproc.rs  mod.rs
vid_dup_finder_app/: Cargo.toml
vid_dup_finder_app/src/: app_fns.rs  arg_parse.rs  arg_parse_template.txt  errors.rs  lib.rs
vid_dup_finder_app/src/gui/: gui_state.rs  gui_thumbnail_set.rs  img_ops.rs  mod.rs  run_gui.rs
