[package]
name = "vid_dup_finder"
version = "0.1.0"
authors = ["Farmadupe"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
"gui" = ["libc", "gtk", "gio", "glib", "gdk-pixbuf", "gdk", "sha2"]
default = ["gui"]

[dependencies]
walkdir = "2"
image = "0.23"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
serde-big-array = "0.3"
bincode = "1.3"
clap = "2"
shell-words = "1.0"
shell-escape = "0.1"
comment = "0.1"
stream-dct = "0.1"
rayon = "1.5"
dashmap = {version = "4.0", features = ["rayon"]}
simplelog = "0.9"
log = "0.4"
byte-unit = "4.0"
thiserror = "1.0"
itertools = "0.10"
rand = "0.8"
libc = {version = "0.2", optional = true}
gtk = { version = "0.9", optional = true}
gio = { version = "0.9", optional = true}
glib = { version = "0.10", optional = true}
gdk-pixbuf = {version="0.9.0", features = ["v2_36_8"], optional = true}
gdk = {version = "0.13", optional = true}
sha2 = {version = "0.9", optional = true}

#for inverse dct experimentation
rustdct = "0.6"
transpose = "0.2"

 

[dev-dependencies]
chrono = "0.4"

[profile.dev]
opt-level = 0
lto=false
debug=true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
#incremental = true
panic = "abort"
  

[profile.test]
opt-level = 3
debug = true
incremental = true
  


[[bin]]
name = "vid_dup_finder"
required-features = ["gui"]
