[workspace]
members = ["vid_dup_finder_app"]

[package]
authors = ["Farmadupe"]
categories = ["command-line-utilities", "multimedia", "visualization"]
keywords = ["video", "duplicate", "phash", "perceptual", "hash"]
description = "A command line application (and linux-only gui) to find duplicate video files"
edition = "2018"
repository = "https://github.com/Farmadupe/vid_dup_finder"
license = "MIT OR Apache-2.0"
name = "vid_dup_finder"
version = "0.1.0"

[features]
"gui" = []
default = ["gui"]

[[bin]]
name = "vid_dup_finder"

[dependencies]
vid_dup_finder_app = {path = "vid_dup_finder_app"} 

[profile.test]
opt-level = 3


