[package]
authors = ["Farmadupe"]
categories = ["command-line-utilities", "multimedia", "visualization"]
keywords = ["video", "duplicate", "phash", "perceptual", "hash"]
description = "A command line application (and linux-only gui) to find duplicate video files"
edition = "2018"
repository = "https://github.com/Farmadupe/vid_dup_finder"
license = "MIT OR Apache-2.0"
name = "vid_dup_finder"
version = "0.1.0"

[features]
"gui" = ["libc", "gtk", "gio", "glib", "gdk-pixbuf", "gdk", "sha2", "regex", "lazy_static"]
default = ["gui"]

[[bin]]
name = "vid_dup_finder"

[dependencies]
vid_dup_finder_lib = "0.1"
video_hash_filesystem_cache = {version = "0.1", features = ["parallel_loading"]}
ffmpeg_cmdline_utils = "0.1"
bincode = "1.3"
byte-unit = "4.0"
clap = "2"
comment = "0.1"
directories-next = "2.0"
image = "0.23"
imageproc = "0.22"
itertools = "0.10"
log = "0.4"
rand = "0.8"
rayon = "1.5"
rusttype = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
shell-words = "1.0"
simplelog = "0.10"
thiserror = "1.0"

walkdir = "2"

# Gui
gdk = {version = "0.13", optional = true}
gdk-pixbuf = {version = "0.9.0", features = ["v2_36_8"], optional = true}
gio = {version = "0.9", optional = true}
glib = {version = "0.10", optional = true}
gtk = {version = "0.9", optional = true}
lazy_static = {version = "1.4", optional = true}
libc = {version = "0.2", optional = true}
regex = {version = "1.5", optional = true}
sha2 = {version = "0.9", optional = true}

#for inverse dct experimentation
rustdct = "0.6"
transpose = "0.2"

[dev-dependencies]
chrono = "0.4"


[profile.test]
opt-level = 3


